[package]
name = "trivia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
htmlentity = "1.3.1"
reqwest = { version ="0.11.24", features = ["json"] }
serde = { version ="1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version ="1.36.0", features = ["full"] }
